add function get badge progress
